# timeline-fishbone-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_data.csv  setup.py  timeline_generator.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: advanced_features.md  api_reference.md  index.md  quickstart.md  user_guide.md
examples/: advanced_usage.py  basic_usage.py  sample_config.yaml
scripts/: build_docs.sh  install_deps.sh  release.py
src/timeline_fishbone/: __init__.py  cli.py  utils.py
src/timeline_fishbone/core/: __init__.py  config.py  latex_generator.py  layout_engine.py  validator.py
tests/: __init__.py  test_config.py  test_generator.py  test_integration.py  test_layout.py  test_validator.py
