[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeline-fishbone"
version = "0.1.0"
description = "A professional LaTeX TikZ timeline fishbone diagram generator from CSV/JSON data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "latex", 
    "tikz", 
    "timeline", 
    "fishbone", 
    "diagram", 
    "visualization",
    "academic",
    "publication"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
    "types-PyYAML>=6.0.0",
    "pandas-stubs>=1.5.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/tyeclipse/timeline-fishbone"
Documentation = "https://timeline-fishbone.readthedocs.io"
Repository = "https://github.com/tyeclipse/timeline-fishbone"
"Bug Tracker" = "https://github.com/tyeclipse/timeline-fishbone/issues"

[project.scripts]
timeline-fishbone = "timeline_fishbone.cli:main"
tfgen = "timeline_fishbone.cli:main"

[tool.setuptools]
packages = ["timeline_fishbone", "timeline_fishbone.core"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
timeline_fishbone = ["py.typed", "templates/*.tex"]

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bokeh.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "timeline_fishbone.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=timeline_fishbone --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/timeline_fishbone"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
